syntax = "proto3";
package load_balancer;

option go_package = "../proto/load_balancer";

service BalancingService {
    rpc GetEdge(User) returns (BalancerResponse);
    rpc LoginClient(User) returns (LoginResponse);
}

enum ErrorCodesLoadBalancer {
    OK = 0;
    NO_SERVER_AVAILABLE = 20;

}

message LoginResponse {
    bool logged = 1;
}

message User {
    string username = 1;
    string passwd = 2;
}

message BalancerResponse {
    string edgeIpAddr = 1;
    string requestId = 2;
}