syntax = "proto3";
package login;

option go_package = "../proto";

service LoginService {
    rpc login(UserInfo) returns (Response);

}

message UserInfo {
    string username = 1 ;
    string passwd = 2 ;
    string email = 3 ;
}

message Response {
    
    enum ResponseType {
        SUCCESS = 0 ;
        ERROR = 1 ;
    }

    // TODO: Change name
    ResponseType response = 1 ;
}
